# litetensor

./: .gitignore  CMakeLists.txt  README.md  batch_generate.sh  build.sh  litetensor  rocks.qsub  run_rocks_mpi.sh
benchmark/data/: tiny.txt
benchmark/matlab/: statistics.m  tensor_dp.m  yelp.m
include/litetensor/: als_mpi_coarse.h  als_omp.h  als_sequential.h  config.h  factor_mpi_coarse.h  factor_omp.h  tensor.h  tensor_mpi_coarse.h  types.h  utils.h
src/: CMakeLists.txt  als_mpi_coarse.cpp  als_omp.cpp  als_sequential.cpp  config.cpp  main.cpp  tensor.cpp  tensor_mpi_coarse.cpp  utils.cpp
