CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(litetensor)

if(APPLE)
    SET(CMAKE_C_COMPILER "g++-6")
endif()

# Configure MPI
FIND_PACKAGE(MPI REQUIRED)
MESSAGE(${MPI_LIBRARIES})
MESSAGE(${MPI_CXX_LIBRARIES})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fopenmp -pthread -O3 -std=c++0x")

# Dependencies
SET(LITETENSOR_HEADER_DIR ${PROJECT_SOURCE_DIR}/include)
SET(EIGEN3_HEADER_DIR ${PROJECT_SOURCE_DIR}/include/third-party/eigen)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(src)
